k8s/containers/memory/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory
  labels:
    app: memory
spec:
  replicas: 3
  selector:
    matchLabels:
      app: memory
  template:
    metadata:
      labels:
        app: memory
    spec:
      containers:
      - command:
        - 'python3'
        - 'app.py'
        name: memory
        image: memory-local:latest
        ports:
        - containerPort: 5000
        imagePullPolicy: IfNotPresent
