k8s/containers/memory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memory
spec:
  selector:
    app: memory
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  sessionAffinity: None
  type: ClusterIP
